log
ju., 24 de ago. de 2023 16:16:24: 
 tests:  0|6
total_score: 0/70
2791ebc
ju., 24 de ago. de 2023 16:24:49: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c1fc4e6
ju., 24 de ago. de 2023 16:31:09: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:58:26: error: expected expression before 'void'
     Node* n = createNode(void *data);
                          ^~~~
Compilation failed
efec942
ju., 24 de ago. de 2023 16:35:30: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
640bc3d
ju., 24 de ago. de 2023 16:41:02: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
cc1530d
ju., 24 de ago. de 2023 16:48:45: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 25/70
6b7515c
ju., 24 de ago. de 2023 16:55:21: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 25/70
c509ecd
